# ocync

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  cliff.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/: RELEASING.md
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  docker.yml  docs.yml  helm.yml  release.yml
bench/: CLAUDE.md  README.md  corpus-partial-overrides.yaml  corpus.yaml  mitmproxy-addon.py
bench-results/2026-04-18-021040/: summary.md
bench-results/runs/: 2026-04-18-021040.json
bench/proxy/: Cargo.toml
bench/proxy/src/: ca.rs  main.rs  proxy.rs
bench/results/: ecr.json
bench/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  user-data.sh
bench/terraform/aws/: main.tf  outputs.tf  user-data.sh
bench/terraform/bench-results/2026-04-18-031724/: summary.md
bench/terraform/bench-results/runs/: 2026-04-18-031724.json
charts/ocync/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
charts/ocync/ci/: cronjob-envfrom-values.yaml  job-externalsecrets-values.yaml  watch-azure-wi-values.yaml  watch-default-values.yaml  watch-secretproviderclass-values.yaml
charts/ocync/templates/: NOTES.txt  _helpers.tpl  _pod.tpl  configmap.yaml  cronjob.yaml  deployment.yaml  externalsecret.yaml  job.yaml  secretproviderclass.yaml  service.yaml  serviceaccount.yaml
charts/ocync/tests/: pod_template_test.yaml  tier1_secrets_test.yaml  tier2_combined_test.yaml  tier2_externalsecret_test.yaml  tier2_secretproviderclass_test.yaml  validation_test.yaml  workload_identity_test.yaml
crates/ocync-distribution/: CLAUDE.md  Cargo.toml  README.md
crates/ocync-distribution/src/: aimd.rs  blob.rs  catalog.rs  client.rs  digest.rs  ecr.rs  error.rs  lib.rs  manifest.rs  reference.rs  sha256.rs  spec.rs  tags.rs
crates/ocync-distribution/src/auth/: acr.rs  anonymous.rs  basic.rs  detect.rs  docker.rs  ecr.rs  ecr_public.rs  gcp.rs  gcr.rs  ghcr.rs  mod.rs  static_token.rs  token_exchange.rs
crates/ocync-distribution/tests/: aimd_tests.rs  auth_anonymous.rs  blob_push_stream.rs  client_integration.rs  ecr_integration.rs  ecr_mount.rs  registry2_client.rs  registry2_mount.rs
crates/ocync-distribution/tests/common/: mod.rs
crates/ocync-sync/: CLAUDE.md  Cargo.toml  README.md
crates/ocync-sync/src/: cache.rs  engine.rs  error.rs  filter.rs  lib.rs  plan.rs  progress.rs  retry.rs  shutdown.rs  staging.rs  version.rs
crates/ocync-sync/tests/: cache_persistence.rs  engine_integration.rs  staging_tests.rs  sync_artifacts.rs  sync_basic.rs  sync_cache.rs  sync_cache_persist.rs  sync_concurrent.rs  sync_discovery.rs  sync_immutable.rs  sync_multi_target.rs  sync_platforms.rs  sync_shutdown.rs  sync_staging.rs
crates/ocync-sync/tests/helpers/: builders.rs  fixtures.rs  mocks.rs  mod.rs
docs/: CLAUDE.md  README.md  astro.config.mjs  benchmark-session-summary.md  design.md  package-lock.json  package.json
docs/plugins/: rewrite-internal-links.mjs
docs/public/: config.schema.json  manifest.webmanifest  robots.txt
docs/specs/: 2026-04-10-ocync-design.md  2026-04-12-transfer-optimization-design.md  2026-04-14-watch-mode-and-discovery-optimization.md  benchmark-design-v2.md  benchmark-design.md  benchmark-suite-design.md  findings.md  ocync-design.md  transfer-optimization-design.md  watch-discovery-design.md
docs/src/: content.config.ts
docs/src/content/: cli-reference.md  configuration.md  fips.md  getting-started.md  helm.md  observability.md  performance.md
docs/src/content/design/: benchmark.md  engine.md  findings.md  overview.md  watch-mode.md
docs/src/content/recipes/: helm-chart-and-images.md  minimum-bytes.md  pin-literals-only.md  production-mirror.md  semver-tracking.md  single-architecture.md  variant-filtering.md
docs/src/content/registries/: acr.md  chainguard.md  docker-hub.md  ecr-public.md  ecr.md  gar.md  ghcr.md  secrets.md
docs/src/layouts/: BaseLayout.astro  DocLayout.astro
docs/src/pages/: 404.astro  [...slug].astro  index.astro
docs/src/styles/: global.css
docs/src/themes/: ocync-dark.json  ocync-light.json
docs/superpowers/specs/: 2026-04-13-output-logging-exit-codes-design.md  2026-04-20-test-boilerplate-reduction-design.md
src/: main.rs
src/cli/: auth_dispatch_tests.rs  config.rs  health.rs  mod.rs  output.rs  progress.rs  shutdown.rs
src/cli/commands/: analyze.rs  auth.rs  copy.rs  dry_run.rs  expand.rs  mod.rs  sync_cmd.rs  synchronize.rs  tags.rs  validate.rs  version.rs  watch.rs
xtask/: Cargo.toml  README.md
xtask/bench-results/runs/: 2026-04-15-100000.json
xtask/src/: main.rs  probe.rs
xtask/src/bench/: config_gen.rs  corpus.rs  ecr.rs  mod.rs  proxy.rs  regression.rs  remote.rs  report.rs  runner.rs
