[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/clowdhaus/ocync"

[workspace.dependencies]
aws-lc-rs = { version = "1", default-features = false, features = ["aws-lc-sys"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
thiserror = { version = "2", default-features = false }
tokio = { version = "1", default-features = false }
ocync-distribution = { path = "crates/ocync-distribution" }

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
doc_markdown = "warn"

[package]
name = "ocync"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OCI registry sync tool"

[lints]
workspace = true

[dependencies]
ocync-distribution.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
