[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/clowdhaus/ocync"

[workspace.dependencies]
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "credentials-process", "rt-tokio", "rustls", "sso"] }
aws-lc-rs = { version = "1", default-features = false, features = ["aws-lc-sys"] }
bytes = { version = "1", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
http = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
thiserror = { version = "2", default-features = false }
tokio = { version = "1", default-features = false }
tracing = { version = "0.1", default-features = false }
reqwest = { version = "0.12", default-features = false }
url = { version = "2", default-features = false }
ocync-distribution = { path = "crates/ocync-distribution" }
ocync-sync = { path = "crates/ocync-sync" }

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
doc_markdown = "warn"

[package]
name = "ocync"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OCI registry sync tool"

[lints]
workspace = true

[dependencies]
anstyle = { version = "1", default-features = false }
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "usage", "error-context", "color"] }
ocync-distribution.workspace = true
ocync-sync.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = { package = "serde_yaml_ng", version = "0.10", default-features = false }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "signal"] }
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "json", "fmt"] }
url.workspace = true
