[workspace]
resolver = "2"
members = ["bench/proxy", "crates/*", "xtask"]

[workspace.package]
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0"
repository = "https://github.com/clowdhaus/ocync"

[workspace.dependencies]
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "credentials-process", "rt-tokio", "rustls"] }
aws-lc-rs = { version = "1", default-features = false }
aws-sdk-ecr = { version = "1", default-features = false, features = ["behavior-version-latest", "default-https-client"] }
aws-sdk-ecrpublic = { version = "1", default-features = false, features = ["behavior-version-latest", "default-https-client"] }
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
google-cloud-auth = { version = "1.9", default-features = false }
bytes = { version = "1", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
http = { version = "1", default-features = false }
schemars = { version = "0.8", default-features = false, features = ["derive"] }
futures-util = { version = "0.3", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde_yaml = { package = "serde_yaml_ng", version = "0.10", default-features = false }
tempfile = { version = "3", default-features = false }
thiserror = { version = "2", default-features = false }
tokio = { version = "1", default-features = false }
tracing = { version = "0.1", default-features = false }
reqwest = { git = "https://github.com/seanmonstar/reqwest", rev = "5f9c231502d827bdd19864277187b133bb746f2f", default-features = false, features = ["query", "system-proxy"] }
url = { version = "2", default-features = false }
uuid = { version = "1", default-features = false, features = ["v7", "serde"] }
ocync-distribution = { path = "crates/ocync-distribution", default-features = false }
ocync-sync = { path = "crates/ocync-sync", default-features = false }

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
collapsible_if = "allow"
doc_markdown = "warn"

[package]
name = "ocync"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OCI registry sync tool"

[package.metadata.release]
publish = false

[features]
default = ["fips"]
fips = ["ocync-distribution/fips"]
non-fips = ["ocync-distribution/non-fips"]

[lints]
workspace = true

[dependencies]
anstyle = { version = "1", default-features = false }
clap = { workspace = true, features = ["color"] }
schemars.workspace = true
http.workspace = true
ocync-distribution.workspace = true
ocync-sync.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "rt", "macros", "signal"] }
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "json", "fmt"] }
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
uuid.workspace = true

# Redirect crates.io reqwest to our git pin so transitive deps
# (google-cloud-auth) resolve to the same version as workspace deps.
[patch.crates-io]
reqwest = { git = "https://github.com/seanmonstar/reqwest", rev = "5f9c231502d827bdd19864277187b133bb746f2f" }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
