[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
aws-config.workspace = true
aws-sdk-ecr.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "process", "time"] }
