[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[package.metadata.release]
release = false

[lints]
workspace = true

[dependencies]
aws-config.workspace = true
futures-util.workspace = true
aws-sdk-ecr.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
reqwest = { workspace = true, features = ["rustls"] }
tokio = { workspace = true, features = ["rt", "process", "time"] }
