[package]
name = "ocync-distribution"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OCI Distribution client library"

[lints]
workspace = true

[dependencies]
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "credentials-process", "rt-tokio", "rustls", "sso"] }
aws-lc-rs.workspace = true
aws-sdk-ecr = { version = "1", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
bytes = { version = "1", default-features = false }
futures-util = { version = "0.3", default-features = false }
http.workspace = true
hex.workspace = true
regex-lite = { version = "0.1", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true
url = { version = "2", default-features = false }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "time", "test-util", "macros", "rt-multi-thread"] }
wiremock = "0.6"
