[package]
name = "ocync-distribution"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OCI Distribution client library"

[lints]
workspace = true

[features]
# Enables `tests/ecr_mount.rs` — wire-level cross-repo mount tests against
# real AWS ECR. Requires AWS credentials in the environment and the
# `OCYNC_TEST_ECR_HOSTNAME` env var pointing at an ECR registry hostname
# (e.g. `123456789012.dkr.ecr.us-east-1.amazonaws.com`). Costs a few cents
# per run (repo create/delete + blob push). Not a production feature —
# gates test compilation only.
ecr-integration = []

[dependencies]
aws-config.workspace = true
aws-lc-rs.workspace = true
aws-sdk-ecr = { version = "1", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
bytes.workspace = true
futures-util = { version = "0.3", default-features = false }
http.workspace = true
hex.workspace = true
regex-lite = { version = "0.1", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "stream", "json", "system-proxy"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true
url = { version = "2", default-features = false }

[dev-dependencies]
aws-config.workspace = true
aws-sdk-ecr.workspace = true
testcontainers = { version = "0.27", default-features = false }
tokio = { workspace = true, features = ["sync", "time", "test-util", "macros", "rt-multi-thread"] }
wiremock = "0.6"
