[package]
name = "ocync-distribution"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OCI Distribution client library"

[features]
default = ["fips"]
fips = ["aws-lc-rs/fips"]
non-fips = ["aws-lc-rs/aws-lc-sys"]

[lints]
workspace = true

[dependencies]
aws-config.workspace = true
aws-lc-rs = { workspace = true }
aws-sdk-ecr = { workspace = true }
aws-sdk-ecrpublic = { workspace = true }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
bytes.workspace = true
futures-util = { version = "0.3", default-features = false }
google-cloud-auth.workspace = true
http.workspace = true
hex.workspace = true
regex-lite = { version = "0.1", default-features = false }
reqwest = { workspace = true, features = ["http2", "rustls-no-provider", "stream", "json"] }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "sync", "time"] }
tracing.workspace = true
url = { workspace = true }

[dev-dependencies]
testcontainers = { version = "0.27", default-features = false }
tokio = { workspace = true, features = ["sync", "time", "test-util", "macros", "rt-multi-thread"] }
wiremock = { version = "0.6", default-features = false }
