[package]
name = "ocync-sync"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OCI registry sync orchestration"

[lints]
workspace = true

[dependencies]
bytes.workspace = true
crc32fast = { version = "1", default-features = false }
futures-util = { version = "0.3", default-features = false }
globset = { version = "0.4", default-features = false }
http.workspace = true
ocync-distribution.workspace = true
postcard = { version = "1", default-features = false, features = ["alloc"] }
reqwest.workspace = true
semver = { version = "1", default-features = false, features = ["std"] }
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "sync", "time"] }
tracing.workspace = true
uuid = { version = "1", default-features = false, features = ["v7", "serde"] }

[dev-dependencies]
serde_json.workspace = true
tempfile = { version = "3", default-features = false }
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
url.workspace = true
wiremock = "0.6"
