[package]
name = "ocync-sync"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OCI registry sync orchestration"

[lints]
workspace = true

[dependencies]
bytes.workspace = true
crc32fast = { version = "1", default-features = false }
futures-util.workspace = true
globset = { version = "0.4", default-features = false }
http.workspace = true
ocync-distribution.workspace = true
postcard = { version = "1", default-features = false, features = ["alloc"] }
reqwest.workspace = true
semver = { version = "1", default-features = false, features = ["std"] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "sync", "time"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = { version = "3", default-features = false }
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"] }
url.workspace = true
wiremock = { version = "0.6", default-features = false }
