[package]
name = "ocync-sync"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OCI registry sync orchestration"
publish = false

[package.metadata.release]
release = false

[lints]
workspace = true

[dependencies]
bytes.workspace = true
crc32fast = { version = "1", default-features = false }
futures-util.workspace = true
globset = { version = "0.4", default-features = false }
http.workspace = true
ocync-distribution.workspace = true
postcard = { version = "1", default-features = false, features = ["alloc"] }
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "sync", "time"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = { version = "3", default-features = false }
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
url.workspace = true
wiremock = { version = "0.6", default-features = false }
